--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-bootstrap-icons": "^1.11.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
-    "react-router-dom": "^6.23.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
