--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "formik": "^2.4.6",
     "i18next": "^23.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
